# LifeLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: LifeLibCI.yml
CMake/: AddEngine.cmake
doc/: Doxyfile  mainpage.dox
include/: Cell.h  Desk.h  Figures.h  LifeEngine.h  LifeModel.h
include/Engines/: CommonEngine.h  OpenMPEngine.h
include/Engines/ThreadEngine/: ThreadEngine.h  ThreadPull.h  barrier.h  jthread.h  thrJoiner.h
src/: CMakeLists.txt  Cell.cpp  Desk.cpp  Figures.cpp  LifeEngine.cpp  LifeModel.cpp
src/Engines/: CommonEngine.cpp  OpenMPEngine.cpp  ThreadEngine.cpp  ThreadPull.cpp
src/benchmark/: CMakeLists.txt  EngineBenchMark.cpp
src/tests/: CMakeLists.txt  CellTest.cpp  LifeModelTest.cpp
src/tests/MvcTests/: CMakeLists.txt  MvcManualTest.cpp  MvcTest.cpp
src/tests/MvcTests/include/: App.h  Controller.h
src/tests/MvcTests/src/: App.cpp  Controller.cpp
test/: CMakeLists.txt  mainTest.cpp
test/testMVC/include/: App.h  Controller.h
test/testMVC/src/: App.cpp  View.cpp
tests/: mainTest.cpp
tests/testMVC/include/: View.h
tests/testMVC/src/: Controller.cpp  View.cpp
